  one to uniquely identify devices in 'info inferiors' with devices
  displayed in 'info devices'.

* Changed commands

info threads [-gid] [-stopped] [ID]...
  This command now takes an optional flag, '-stopped', that causes only
  the stopped threads to be printed.  The flag can be useful to get a
  reduced list when there is a large number of unstopped threads.

* Add convenience variable `$_simd_lane`.

* Python API

  ** Added gdb.record.clear(). Clears the trace data of the current recording.
     This forces re-decoding of the trace for successive commands.

* MI changes

  ** New field in '-thread-info': 'thread-workgroup'

     Added a new field to the '-thread-info' command.  If the thread is
     stopped, available, and the workgroup is defined for its arch,
     the new field contains a string with a three-dimensional tuple: "x, y, z"
     that denotes the coordinates of the thread workgroup.

  ** '-break-insert -l'

     Added optional -l <simd-lane-id> argument to MI command -break-insert.
     A lane can be specified only together with the thread: user must provide
     a thread with -p argument.

     MI result output for -break-insert command will also contain
     lane="simd-lane-id" information if -l argument was specified.

     Also the MI output of -break-list and -break-info commands will have
     lane="simd-lane-id" information if the breakpoint is thread and SIMD lane
     specific.

  ** '-thread-info'

     If a thread is stopped, available, and has SIMD lanes, MI output
     of '-thread-info' for such a thread contains 'execution-mask' and
     'simd-width' fields.  If a thread is stopped at a breakpoint, add
     'hit-lanes-mask' to its output.  The mask encodes for which lanes
     the breakpoint condition was evaluated to true.

  ** '-device-info'

     Added new MI command '-device-info' which is equivalent to CLI command
     'info devices'.

  ** Stop events include execution-mask, simd-width and hit-lanes-mask fields if