@@ -444,6 +444,7 @@ proc_with_prefix test-thread-apply {} {
 		"-c"
 		"-q"
 		"-s"
+		"-unavailable"
 	    }
 	} else {
 	    # "-ascending" only works with "all".
@@ -451,6 +452,7 @@ proc_with_prefix test-thread-apply {} {
 		"-c"
 		"-q"
 		"-s"
+		"-unavailable"
 	    }
 	}
 
